[project]
name = "hxq-llm-api"
version = "0.1.0"
description = "HXQ LLM API - 基于 VLLM 的心理咨询大模型 API 服务"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.112.0",
    "uvicorn>=0.30.5",
    "sse-starlette>=2.1.3",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "aiohttp>=3.10.0",
    "pymysql>=1.1.1",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "loguru>=0.7.0",
]
